--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=userApi
+spring.application.name=nvne-user-admin-service
 spring.profiles.active=dev
 #spring.cloud.config.uri=http://localhost:8888
 management.endpoints.web.exposure.include=*
@@ -6,9 +6,9 @@ management.endpoints.web.exposure.include=*
 server.port=8081
 #spring.jpa.database=POSTGRESQL
 #spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/nvnena9gef9xh7ufku9w
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.url=jdbc:postgresql://localhost:5432/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
 #spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
@@ -30,8 +30,8 @@ spring.mail.properties.mail.smtp.timeout = 5000
 spring.mail.properties.mail.smtp.writetimeout = 5000
 
 keycloak.realm=nvne-realm
-keycloak.auth-server-url=http://localhost:8080/auth/
-keycloak.resource=nvne-user-api
+keycloak.auth-server-url=https://35.201.82.198/auth/
+keycloak.resource=nvne-user-admin-service
 keycloak.public-client=false
 keycloak.bearer-only=true
 keycloak.cors=true
