--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,7 +30,7 @@ spring.mail.properties.mail.smtp.timeout = 5000
 spring.mail.properties.mail.smtp.writetimeout = 5000
 
 keycloak.realm=nvne-realm
-keycloak.auth-server-url=https://35.201.82.198/auth/
+keycloak.auth-server-url=https://accounts.nvne.fr/auth/
 keycloak.resource=nvne-user-admin-service
 keycloak.public-client=false
 keycloak.bearer-only=true
