--- a/user-admin-service-deployement.yml
+++ b/user-admin-service-deployement.yml
@@ -1,8 +1,3 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: nvne
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -18,10 +13,10 @@ spec:
       labels:
         app: nvne-user-admin-service
     spec:
-      # serviceAccountName: nvne-user-admin
+      # serviceAccountName: nvne-user-service-ksa
       containers:
         - name: nvne-user-admin-service
-          image: gcr.io/indigo-almanac-283817/nvne-user-admin-service:0.0.4
+          image: gcr.io/stellar-spark-300508/nvne-user-admin-service:0.0.5
           ports:
             - containerPort: 8081
           env:
@@ -54,7 +49,7 @@ spec:
 
             # Replace DB_PORT with the port the proxy should listen on
             # Defaults: MySQL: 3306, Postgres: 5432, SQLServer: 1433
-            - "-instances=indigo-almanac-283817:us-central1:nvnedb=tcp:5432"
+            - "-instances=stellar-spark-300508:us-central1:rnsks6xfs9urrngn=tcp:5432"
             # This flag specifies where the service account key can be found
             - "-credential_file=/secrets/service_account.json"
           securityContext:
@@ -68,4 +63,4 @@ spec:
       volumes:
       - name: nvne-sa-secret-volume
         secret:
-          secretName: nvne-sa-secret
+          secretName: nvne-sa-credentials
