--- a/user-admin-service-service.yml
+++ b/user-admin-service-service.yml
@@ -4,12 +4,12 @@ metadata:
   name: nvne-user-admin-service
   namespace: nvne
   labels:
-    app: nvne-front
+    app: nvne-user-admin-service
 spec:
   ports:
   - protocol: TCP
     port: 8080
     targetPort: 8081
   selector:
-    app: nvne-front
-  type: ClusterIP
+    app: nvne-user-admin-service
+  type: NodePort
