--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 #spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.data.rest.basePath=/api
@@ -30,7 +30,7 @@ spring.mail.properties.mail.smtp.timeout = 5000
 spring.mail.properties.mail.smtp.writetimeout = 5000
 
 keycloak.realm=nvne-realm
-keycloak.auth-server-url=https://accounts.nvne.fr/auth/
+#keycloak.auth-server-url=https://accounts.nvne.fr/auth/
 keycloak.resource=nvne-user-admin-service
 keycloak.public-client=false
 keycloak.bearer-only=true
