front + back merge

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=nvne-user-admin-service
 spring.profiles.active=dev
 #spring.cloud.config.uri=http://localhost:8888
 management.endpoints.web.exposure.include=*
+#spring.mvc.static-path-pattern=/content/**
 
 server.port=8081
 #spring.jpa.database=POSTGRESQL
