--- a/src/main/application.properties
+++ b/src/main/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=nvne-user-admin-service
-spring.profiles.active=dev
+# spring.profiles.active=dev
 #spring.cloud.config.uri=http://localhost:8888
 management.endpoints.web.exposure.include=*
 #spring.mvc.static-path-pattern=/content/**
@@ -7,13 +7,7 @@ management.endpoints.web.exposure.include=*
 server.port=8081
 #spring.jpa.database=POSTGRESQL
 #spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/${DB_NAME}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
 #spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.data.rest.basePath=/api
 spring.servlet.multipart.max-file-size=1024KB
@@ -31,8 +25,8 @@ spring.mail.properties.mail.smtp.timeout = 5000
 spring.mail.properties.mail.smtp.writetimeout = 5000
 
 keycloak.realm=nvne-realm
-#keycloak.auth-server-url=https://accounts.nvne.fr/auth/
+keycloak.auth-server-url=https://accounts.nvne.fr/auth/
 keycloak.resource=nvne-user-admin-service
-keycloak.public-client=false
-keycloak.bearer-only=true
+keycloak.public-client=true
+keycloak.bearer-only=false
 keycloak.cors=true
