--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,2 +1,35 @@
 #spring.cloud.config.uri=http://service-config:8888
+spring.application.name=nvne-user-admin-service
+server.port=8081
+management.endpoints.web.exposure.include=*
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+
+spring.data.rest.basePath=/api
+
+spring.servlet.multipart.max-file-size=1024KB
+spring.servlet.multipart.max-request-size=1024KB
+
+spring.mail.host = smtp-relay.sendinblue.com
+spring.mail.port = 587
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.username = mbovingfred@gmail.com
+spring.mail.password = X8?t8dpE,d8mnA(4
+spring.mail.properties.mail.smtp.starttls.required = true
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.connectiontimeout = 5000
+spring.mail.properties.mail.smtp.timeout = 5000
+spring.mail.properties.mail.smtp.writetimeout = 5000
+
+
+keycloak.realm=nvne-realm
 keycloak.auth-server-url=https://accounts.nvne.fr/auth
+keycloak.resource=nvne-user-admin-service
+keycloak.public-client=true
+keycloak.bearer-only=false
+keycloak.cors=true
