--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -29,7 +29,7 @@ spring.mail.properties.mail.smtp.writetimeout = 5000
 
 keycloak.realm=nvne-realm
 keycloak.auth-server-url=http://localhost:8080/auth
-keycloak.resource=nvne-user-admin-service
+keycloak.resource=userApi
 keycloak.public-client=true
 keycloak.bearer-only=false
 keycloak.cors=true
